...
                            testID="dev-tools2-filter:permissions"
                            title="Permission States"
                            selected={selectedExample === 'permissions'}
                            onPress={() => setSelectedExample('permissions')}
                        />
                        <Item
                            testID="dev-tools2-filter:permissions.pending"
                            title="Permission: pending"
                            selected={selectedExample === 'toolPending'}
                            onPress={() => setSelectedExample('toolPending')}
                        />
                        <Item
                            testID="dev-tools2-filter:permissions.pending-inactive"
                            title="Permission: inactive"
                            selected={selectedExample === 'toolPendingInactive'}
                            onPress={() => setSelectedExample('toolPendingInactive')}
                        />
                        <Item
                            testID="dev-tools2-filter:ask-user-question"
...
