...
      </View>
  );

  return (
      <View style={[style.tableContainer, props.first && style.first, props.last && style.last]}>
          <HorizontalOverflowScrollView
              testID="markdown-table-scroll"
              showsHorizontalScrollIndicator={true}
              style={style.tableScrollView}
          >
              {scrollContents}
          </HorizontalOverflowScrollView>
      </View>
...
